# CVEZD3FEND

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
.github/: fasttrack-baseline-trigger.txt  fasttrack-code.patch.gz.b64  fasttrack-debug-trigger.txt  fasttrack-publish-trigger.txt  fasttrack-tests.patch.gz.b64  fasttrack-tree-trigger.txt  fasttrack-workspace-trigger.txt
.github/audit/: pr11-main-validation-run.txt  pr6-final-run.txt
.github/workflows/: fasttrack-baseline.yml  fasttrack-patch-debug.yml  fasttrack-publish.yml  fasttrack-real-demo.yml  fasttrack-tree-sha.yml  final-analyze-json-report.yml  final-closure-workspace.yml  final-frontend-test-diagnostic.yml  final-full-test-json-report.yml  final-product-closure-pr-v2.yml  final-product-closure-pr.yml  final-product-closure.yml  final-promote-correction.yml  final-published-head-audit.yml  final-transform-diagnostic.yml  final-validation-diagnostic.yml  iteration2-preflight.yml  (+13 more)
audit/: final-closure-trigger-2.txt  final-closure-trigger-3.txt  iteration2_demo.py  iteration2_screenshots.py  step-a.patch.gz.b64  step_a_demo.py
contracts/: AI_ASSISTANCE_CONTRACT.md  BUNDLE_CONTRACT.md  EXPORT_CONTRACT.md  GRAPH_CONTRACT.md  MAPPING_CONTRACT.md  MCP_CONTRACT.md  PROVENANCE_CONTRACT.md  UIX_CONTRACT.md  VALIDATION_CONTRACT.md
docs/: AI_GOVERNANCE.md  ARCHITECTURE.md  ATTRIBUTION.md  DATA_SOURCES.md  OPERATIONS.md  PRODUCT_VISION.md  UI_GUIDE.md
tests/: conftest.py
web/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+233 files in other folders)
