[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CVEzD3FEND"
version = "1.0.0"
description = "Static-first defensive intelligence navigator: CVE -> CWE -> CAPEC -> ATT&CK -> D3FEND -> ATLAS -> SOC/CTEM actions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "CVEzD3FEND contributors" }]
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
mcp = ["mcp>=1.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[project.scripts]
CVEzD3FEND = "CVEzD3FEND.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/CVEzD3FEND"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
